--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.2",
   "description": "Lazy compile dynamic imports to boost your webpack startup time.",
   "keywords": [
+    "webpack",
+    "plugin",
+    "lazy-compile-webpack-plugin",
     "lazy",
     "compile",
     "dynamic",
-    "import",
-    "webpack"
+    "import"
   ],
   "engines": {
     "node": ">=8.10"
@@ -34,5 +36,8 @@
     "detect-port-alt": "^1.1.6",
     "loader-utils": "^1.2.3",
     "util.promisify": "^1.0.0"
+  },
+  "peerDependencies": {
+    "webpack": "^4.0.0"
   }
 }
